# WebAI

./: .gitignore  DESIGN.md  README.md  pyproject.toml  test.html
gateway/: schemas.py  server.py
gateway/backends/: __init__.py  base.py  deepseek.py  doubao.py
gateway/deepseek/: __init__.py  client.py  pow.py  session.py  sse.py
